fixed checkbox alignment

--- a/app/views/apps/funding-forecaster-poc-c/assets/sass/sub-application.scss
+++ b/app/views/apps/funding-forecaster-poc-c/assets/sass/sub-application.scss
@@ -1962,7 +1962,7 @@ li.added + li {
     height: 34px;
     position: absolute;
     top: 0;
-    left: -38px;
+    left: 0;
 }
 
 @media (min-width: 641px) {
